--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "MINES ParisTech - PSL University"
   pubmed           :  
   googlescholar    : 
-  email            :
+  email            : joao.bertoldo@mines-paristech.fr
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
