update file names

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "João P C Bertoldo"
   avatar           : "profile-alps.png"
-  bio              : "A Ph.D. wannabe product of a double engineering degree, a few jobs in the tech world, living four countries, and an MSc. in AI."
+  bio              : "A Ph.D. wannabe, product of a double engineering degree, a few jobs in the tech world, living four countries, and an MSc. in AI."
   location         : "Paris, France"
   employer         : "MINES ParisTech - PSL University"
   pubmed           :  
