--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/joaopcbertoldo/"
+  linkedin         : "joaopcbertoldo"
   orcid            : "https://orcid.org/0000-0002-9512-772X"
   pinterest        :
   soundcloud       :
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/channel/UCkRd9GlCUfQO1XZVmKJfzcQ"
+  youtube          :
   wikipedia        :
 
 
